<resources>
    <string name="app_name">Fake Social Network</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="username">username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="password_must_be_6_or_more_characters">Password must be 6 or more characters</string>
    <string name="username_not_available_try_another">Username not available try another</string>
    <string name="login_failed">Login Failed</string>
    <string name="the_username_and_password_you_entered_do_not_match_any_account">The username and password you entered do not match any account.</string>
    <string name="try_again">Try again</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_profile">Profile</string>
    <string name="user_info">UserInfo</string>
    <string name="edit_profile">Edit profile</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="link">Link</string>
    <string name="verified_account">Verified account</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="enter_a_number_of_likes">Enter a number of likes</string>
    <string name="enter_a_number_of_comments">Enter a number of comments</string>
    <string name="enter_a_number_of_shares">Enter a number of shares</string>
    <string name="follow">Follow</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login_successful">Login successful</string>
    <string name="registered_user_successfully">Registered user successfully</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="updated_user">Updated user</string>
    <string name="post_published">Post published</string>
    <string name="post_updated">Post updated</string>
    <string name="post_deleted">Post deleted</string>
    <string name="search_users">Search users</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="likes">likes</string>
    <string name="comments">comments</string>
    <string name="shares">shares</string>
    <string name="image_link">Image Link</string>
    <string name="link_profile_picture">Link Profile Picture</string>
    <string name="zero_likes">0 likes</string>
    <string name="zero_comments_shares">0 comments • 0 shares</string>
    <string name="zero">0</string>
    <string name="create_an_account">Create an account</string>
</resources>