<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.presentation.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="?attr/colorControlHighlight"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:padding="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mBack"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
                android:text="@string/create_an_account"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="?attr/colorControlHighlight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_at"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:digits="abcdefghijklmnopqrstuvwxyz0123456789._"
                android:maxLength="30"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_name"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_password"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789!¡@$%^_-={}[]|\:;'/¿?#>*"
                android:maxLength="12"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="20dp"
            android:padding="16dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle1"/>

    </LinearLayout>

</RelativeLayout>