<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileEdit.presentation.ProfileEditFragment">

    <ScrollView
        android:id="@+id/mContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/mProfilePicture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <ImageView
                    android:id="@+id/mCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <ProgressBar
                    android:id="@+id/mProgressBarProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_at"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textFilter"
                    android:digits="abcdefghijklmnopqrstuvwxyz0123456789._"
                    android:maxLength="30"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/ic_name"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                app:startIconDrawable="@drawable/ic_bio"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/link"
                app:startIconDrawable="@drawable/ic_link"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:maxLength="50"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789+×÷=/_!@#$%*-?\|¡¿"
                    android:maxLength="12"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/mSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verified_account"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

            <Button
                android:id="@+id/mSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>