<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_at"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:digits="abcdefghijklmnopqrstuvwxyz0123456789._"
                android:maxLength="30"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_password"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789+×÷=/_!@#$%*-?\|¡¿"
                android:maxLength="12"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAppearance="?attr/textAppearanceSubtitle1"/>

        <ProgressBar
            android:id="@+id/mProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/mSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:padding="8dp"
        android:text="@string/do_not_have_an_account_sign_up"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>

</RelativeLayout>